syntax = "proto3";

package  plugin;

import "raw_packet.proto";
import "visual_message.proto";
import "google/protobuf/empty.proto";



option go_package = "proxy-system-backend/proto/plugin;plugin";


message DecodeRequest {
  raw.RawPacket packet = 1;

  // 由主程序选择的协议版本
  string protocol_id = 2;
}

message DecodeResponse {
  repeated visual.VisualMessage messages = 1;
}

message PluginInfo {
  string name        = 1;
  string game        = 2;
  string version     = 3;
  string author      = 4;
  string description = 5;

  // 支持的协议版本
  repeated ProtocolDesc protocols = 6;
}

message ProtocolDesc {
  string id           = 1; // v1 / v2 / cn_2024
  string display_name = 2;
}

service GameProtocolPlugin {
  // 插件元信息
  rpc Info (google.protobuf.Empty) returns (PluginInfo);

  // 解码入口
  rpc Decode(DecodeRequest) returns (DecodeResponse);

  // 连接重置（断线 / 回放重置）
  rpc ResetConn(ResetConnRequest) returns ( google.protobuf.Empty);
}

message ResetConnRequest {
  string conn_id = 1;
}
